@@ -7,7 +7,7 @@
       "Tim Lister <tlister@lcogt.net>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "Module::Build version 0.3901, CPAN::Meta::Converter version 2.120630",
+   "generated_by" : "Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921",
    "license" : [
       "perl_5"
    ],
@@ -31,7 +31,7 @@
    "provides" : {
       "Astro::WaveBand" : {
          "file" : "lib/Astro/WaveBand.pm",
-         "version" : "0.08"
+         "version" : "0.09"
       }
    },
    "release_status" : "stable",
@@ -44,5 +44,5 @@
          "url" : "git://github.com/timj/perl-Astro-WaveBand.git"
       }
    },
-   "version" : "0.08"
+   "version" : "0.09"
 }
