@@ -10,7 +10,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.3
 dynamic_config: 1
-generated_by: 'Module::Build version 0.3901, CPAN::Meta::Converter version 2.120630'
+generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,9 +19,9 @@ name: Astro-WaveBand
 provides:
   Astro::WaveBand:
     file: lib/Astro/WaveBand.pm
-    version: 0.08
+    version: 0.09
 resources:
   homepage: http://github.com/timj/perl-Astro-WaveBand/tree/master
   license: http://dev.perl.org/licenses/
   repository: git://github.com/timj/perl-Astro-WaveBand.git
-version: 0.08
+version: 0.09
