@@ -1,3 +1,11 @@
+2014-02-13  Graham Bell <g.bell@jach.hawaii.edu>
+
+	* WaveBand.pm: Add 1.69CH4_l filter for UFTI.
+
+2013-02-13  Graham Bell <g.bell@jach.hawaii.edu>
+
+	* WaveBand.pm: Add RxA3M for JCMT.
+
 2012-05-24  Tim Lister <tlister@lcogt.net>
 
 	* WaveBand.pm: Include Sloan, PanSTARRS w & Y and solar filters
